--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,19 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# python
+__pycache__/
+*.pyc
+
+# venv
+venv/
+.env/
+config.py
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
